<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nothing.android_week15_retrofit.WeatherActivity">

    <Button
        android:id="@+id/button_get_weather_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_get_data"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/latitude"/>

        <TextView
            android:id="@+id/text_latitude"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/longitude"/>

        <TextView
            android:id="@+id/text_longitude"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/temperature"/>

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/humidity"/>

        <TextView
            android:id="@+id/text_humidity"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="4"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/wind_speed"/>

        <TextView
            android:id="@+id/text_wind_speed"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_30"
            android:layout_weight="4"/>
    </LinearLayout>


</LinearLayout>
